# atomic

.github/workflows/: test.yml
crates/atomic-core/src/: lib.rs
crates/atomic-core/src/reports/: agentic.rs  seed.rs
crates/atomic-server/: Cargo.toml
crates/atomic-server/src/: state.rs
crates/atomic-server/src/routes/: dashboard.rs  reports.rs
crates/atomic-server/tests/: e2e_atom_pipeline.rs  e2e_auth.rs  e2e_concurrent.rs  e2e_mcp.rs  e2e_multi_db.rs  e2e_websocket.rs
crates/atomic-server/tests/support/: mod.rs
docs/plans/: reports-phase-5-templates-and-polish.md
src/components/dashboard/widgets/: BriefingWidget.tsx
src/components/reports/: CitationPolicyField.tsx  FeaturedDropdown.tsx  FeaturedStarButton.tsx  FindingRow.tsx  FindingsList.tsx  ReportDetailMeta.tsx  ReportDetailView.tsx  ReportEditorModal.tsx  ReportRow.tsx  ReportTemplateCard.tsx  ReportTemplateGallery.tsx  ReportsFullView.tsx  ReportsList.tsx  ScopeField.tsx  index.ts
src/components/ui/: ContextMenu.tsx
src/lib/: reportTemplates.ts
src/lib/transport/: event-normalizer.ts
src/stores/: featuredReport.ts  reports.ts
